--- a/Backend/FRONTEND/src/Screens/css/style.css
+++ b/Backend/FRONTEND/src/Screens/css/style.css
@@ -243,6 +243,7 @@ button:hover {
 
 .users-members{
     display: flex;
+    width: auto;
     text-align: start;
     align-items: flex-start;
     flex-direction: row;
@@ -427,257 +428,32 @@ button:hover {
     margin-bottom: 40px;
 }
 
-
-/* Media Query */
-
-@media (max-width: 800px) {
-    .content-channel .channel-aside {
-        width: 200px;
-    }
-
-    .box-input-teclado {
-        width: calc(100vw - 270px);
-    }
-    .chat {
-        width: calc(100vw - 270px);
-    }
-
-    .chat-vacio{
-        margin-left: 90px;
-    }
-
-    .canales-mostrar{
-        margin: 10px;
-    }
-
-    .h1-work-channel{
-        font-size: 22px;
-    }
-
-    .input-channel{
-        margin-left: 10px;
-    }
+.channels-ul{
+    width: auto;
+    height: 300px;
+    overflow-y: auto;
 }
 
-@media (max-width: 440px) {
-    /* Login/Register/rewrite/reset */
-    .content {
-        width: 90%;
-        max-width: 320px;
-        height: auto;
-        padding: 15px;
-    }
+.channels-members{
+    width: auto;
+    height: 80px;
+    overflow-y: auto;
+}
 
-    .options {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
+ul::-webkit-scrollbar {
+    width: 10px;
+}
 
-    h1 {
-        display: flex;
-        font-size: 26px;
-        text-align: center;
-        padding: 20px;
-        color: beige;
-        justify-content: flex-start;
-        text-shadow: 3px 2px 4px rgba(7, 6, 6, 0.6);
-        margin-top: 25px;
-    }
+ul::-webkit-scrollbar-track {
+    background-color: #201124;
+    border-radius: 10px;
+}
 
-    input {
-        width: 200px;
-        height: 35px;
-        padding: 0 8px;
-    }
+ul::-webkit-scrollbar-thumb {
+    background-color: var(--color-content);
+    border-radius: 10px;
+}
 
-    .label-login-email-password {
-        margin-bottom: 8px;
-        font-size: 14px;
-    }
-
-    button {
-        width: 80px;
-        height: 35px;
-        margin-top: 20px;
-        font-size: 12px;
-    }
-
-    button:hover {
-        background-color: var(--four-primary-color);
-    }
-    
-
-    .a-password {
-        margin-top: 20px;
-        font-size: 14px;
-    }
-    .a-password:hover {
-        color: rgb(255, 255, 255);
-        font-weight: bold;
-    }
-
-    /* Workspace */
-    .box-workspaces {
-        width: 290px;
-        height: 90%;
-        padding: 20px;
-    }
-
-    .h1-work {
-        font-size: 20px;
-    }
-
-    .label-workspaces {
-        font-size: 16px;
-        color: beige;
-        text-shadow: 2px 2px 4px rgba(7, 6, 6, 0.945);
-    }
-
-    .cont-create-workspace {
-        flex-direction: column;
-    }
-
-    .cont-buttons{
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        flex-direction: row;
-    }
-
-    .input-workspaces {
-        width: 100%;
-        padding: 8px;
-        font-size: 14px;
-        margin-top: 5px;
-    }
-
-    .button-add {
-        width: 35px;
-        height: 35px;
-        font-size: 18px;
-        margin-top: 10px;
-        padding: 5px;
-    }
-
-    .workspace-button {
-        width: 100%; 
-        padding: 10px;
-        font-size: 14px;
-        margin-bottom: 10px;
-    }
-
-    .btn-box {
-        display: flex;
-        flex-direction: row;
-        gap: 10px;
-        width: 100px;
-        align-items: center;
-    }
-
-    .form-work {
-        display: flex;
-        justify-content: space-between;
-        gap: 10px;
-    }
-
-    .input-work{
-        width: 100px;
-    }
-
-    .cont-create-workspace input {
-        padding: 10px;
-        font-size: 14px;
-    }
-
-    .cont-create-workspace label {
-        display: none;
-    }
-
-    .cont-create-workspace .btn-crear{
-        margin-top: 0;
-        padding: 4px;
-    }
-
-    /* Channel */
-    .h1-channel{
-        margin-top: -20px;
-    }
-    .h2-channel {
-        margin-top: -20px;
-        font-size: 14px;
-    }
-
-    .canales-mostrar-2{
-        width: 90px;
-    }
-    
-    .box-channels{
-        flex-direction: row;
-        width: 220px;
-    }
-
-    .cont-input-channel-add .btn-mas{
-        margin-top: 30px;
-        width: 50px;
-    }
-
-    /* Channel-Chat */
-    .channel-aside {
-        display: none;
-    }
-
-    .aside-princ{
-        width: 60px;
-    }
-
-    .content-channel {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 100vh;
-        overflow: hidden;
-    }
-
-    .messages-container {
-        flex-grow: 1;
-        width: calc(100vw - 60px);
-        overflow-y: auto;
-        padding: 1px;
-    }
-
-    .chat-vacio{
-        margin-top: 20px;
-        margin-left: 60px;
-    }
-
-    .box-input-teclado {
-        width: calc(100vw - 60px);
-        bottom: 0;
-        left: 0;
-        padding: 5px;
-        height: 50px;
-    }
-
-    .message{
-        max-width: 100%;
-    }
-
-    .message p{
-        width: 200px;
-    }
-
-    .box-input-teclado input{
-        width: 80%;
-        height: 90%;
-    }
-
-    .btn-env-chat{
-        position: absolute;
-        margin-top: 4px;
-        margin-right: -14px;
-        width: 40px;
-    }
+ul::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-color);
 }
