--- a/Backend/FRONTEND/src/Screens/css/icons.css
+++ b/Backend/FRONTEND/src/Screens/css/icons.css
@@ -59,5 +59,27 @@
 
 .bi-person-circle{
     width: 50px;
+    font-size: 40px;
     height: 50px;
+}
+
+.icon-tec{
+    cursor: pointer;
+    color: beige;
+    margin-left: 14px;
+    padding: 4px;
+    font-size: 20px;
+    border-radius: 4px;
+}
+
+.line{
+    display: inline-block;
+    transform: rotate(90deg);
+    color: gray;
+    font-size: 26px;
+    margin-left: 10px;
+}
+
+.icon-tec:hover{
+    background-color: gray;
 }
