--- a/Backend/FRONTEND/src/Screens/css/style.css
+++ b/Backend/FRONTEND/src/Screens/css/style.css
@@ -331,7 +331,7 @@ button:hover {
     padding: 10px;
     background-color: #1a1d21;
     margin-top: auto;
-    border-left: 1px solid #565856;;
+    border-left: 1px solid #565856;
 }
 
 .cont-teclado-env {
@@ -341,15 +341,64 @@ button:hover {
     max-width: 100%;
 }
 
-.cont-teclado-env input {
-    width: 100%;
-    height: 100px;
+.cont-icons-teclado{
+    position: relative;
+    justify-content: center;
+    flex-direction: row;
     background-color: #222529;
+    left: 4px;
+    width: auto;
+    top: -40px;
+}
+
+.cont-teclado-env{
+    width: 100%;
+    height: 120px;
+    background-color: #222529;
+    flex-direction: column;
     padding: 8px;
     border-radius: 10px;
-    font-size: 14px;
-    text-align:start;
+    padding-top: 44px;
+    align-items: flex-start;
     border: 1px solid #565856;
+}
+
+.text-btn{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding-left: 20px;
+    height: 120px;
+}
+
+.textarea{
+    display: flex;
+    width: 90%;
+    height: 60px;
+    background-color: #222529;
+    border: 1px solid #222529;
+    margin-top: -30px;
+    font-size: 14px;
+    color: beige;
+    align-items: flex-start;
+}
+
+textarea::-webkit-scrollbar {
+    width: 6px;
+}
+
+textarea::-webkit-scrollbar-track {
+    background-color: #222529;
+    border-radius: 10px;
+}
+
+textarea::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 10px;
+}
+
+textarea::-webkit-scrollbar-thumb:hover {
+    background-color: grey;
 }
 
 .btn-env-chat{
@@ -357,7 +406,7 @@ button:hover {
     width: 50px;
     height: 30px;
     right: 20px;
-    margin-top: 50px;
+    margin-top: 6px;
     margin-left: 10px;
     font-size: 20px;
     background-color: #222529;
