--- a/Backend/FRONTEND/src/Screens/css/style.css
+++ b/Backend/FRONTEND/src/Screens/css/style.css
@@ -506,3 +506,32 @@ ul::-webkit-scrollbar-thumb {
 ul::-webkit-scrollbar-thumb:hover {
     background-color: var(--primary-color);
 }
+
+.spinner {
+    width: 36px;
+    height: 36px;
+
+    border: 5px solid #fffc;
+    border-top-color: var(--primary-color);
+    border-radius: 100%;
+
+    animation: spin 1s infinite;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
