--- a/Backend/FRONTEND/src/Screens/css/icons.css
+++ b/Backend/FRONTEND/src/Screens/css/icons.css
@@ -18,6 +18,13 @@
     background-color: #2b092f;
 }
 
+.btn-perfil{
+    padding: 4px;
+    width: 50px;
+    height: 50px;
+    background-color: #2b092f;
+}
+
 .bi:hover{
     background-color: #523057;
 }
@@ -58,9 +65,8 @@
 }
 
 .bi-person-circle{
-    width: 50px;
+    margin-top: 2px;
     font-size: 40px;
-    height: 50px;
 }
 
 .icon-tec{
