--- a/Backend/FRONTEND/src/Screens/css/mediaScrenn.css
+++ b/Backend/FRONTEND/src/Screens/css/mediaScrenn.css
@@ -9,7 +9,7 @@
     /* Ajustes generales */
     .content {
         width: 40%;
-        height: 70%;
+        height: 86%;
     }
 
     .options {
@@ -56,7 +56,7 @@
     /* Workspaces */
     .box-workspaces {
         width: 1000px;
-        height: 60%;
+        height: 84%;
         padding: 40px;
     }
 
@@ -263,7 +263,7 @@
         width: 86%;
         height: 100px;
         margin-top: -30px;
-        font-size: 22px;
+        font-size: 24px;
     }
 
     .icon-tec{
@@ -279,6 +279,16 @@
 
     .text-btn{
         padding-left: 10px;
+    }
+
+    .btn-perfil{
+        width: 90px;
+        height: 90px;
+    }
+
+    .bi-person-circle{
+        font-size: 70px;
+        margin-bottom: 4px;
     }
 }
 
@@ -324,10 +334,9 @@
         font-size: 24px;
     }
 
-    .bi-person-circle{
+    .btn-perfil{
         width: 50px;
         height: 50px;
-        font-size: 34px;
     }
 
     .textarea {
@@ -574,6 +583,16 @@
     .cont-icons-teclado{
         top: -20px;
     }
+
+    .btn-perfil{
+        width: 40px;
+        height: 40px;
+    }
+
+    .bi-person-circle{
+        font-size: 28px;
+    }
+
 
     .icon-tec{
         margin-left: 4px;
