--- a/Backend/FRONTEND/src/Screens/css/style.css
+++ b/Backend/FRONTEND/src/Screens/css/style.css
@@ -472,6 +472,17 @@ textarea::-webkit-scrollbar-thumb:hover {
     margin-top: 25px;
 }
 
+.success-message {
+    color: green;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 10px;
+    border: 1px solid green;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+
 .create-h1 {
     font-size: 38px;
     margin-bottom: 40px;
@@ -485,26 +496,48 @@ textarea::-webkit-scrollbar-thumb:hover {
 
 .channels-members{
     width: auto;
-    height: 80px;
+    height: 110px;
     overflow-y: auto;
 }
 
-ul::-webkit-scrollbar {
+.channels-ul::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-color);
+}
+
+.channels-ul::-webkit-scrollbar {
     width: 10px;
 }
 
-ul::-webkit-scrollbar-track {
+.channels-ul::-webkit-scrollbar-track {
     background-color: #201124;
     border-radius: 10px;
 }
 
-ul::-webkit-scrollbar-thumb {
+.channels-ul::-webkit-scrollbar-thumb {
     background-color: var(--color-content);
     border-radius: 10px;
 }
 
-ul::-webkit-scrollbar-thumb:hover {
+.users-members{
+    padding-right: 20px;
+}
+
+.channels-members::-webkit-scrollbar-thumb:hover {
     background-color: var(--primary-color);
+}
+
+.channels-members::-webkit-scrollbar {
+    width: 6px;
+}
+
+.channels-members::-webkit-scrollbar-track {
+    background-color: #201124;
+    border-radius: 10px;
+}
+
+.channels-members::-webkit-scrollbar-thumb {
+    background-color: var(--color-content);
+    border-radius: 10px;
 }
 
 .spinner {
@@ -534,4 +567,61 @@ ul::-webkit-scrollbar-thumb:hover {
     to {
         transform: rotate(360deg);
     }
+}
+
+/* Profile */
+
+.profile-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5); /* Fondo oscuro semitransparente */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Para que esté por encima de otros elementos */
+}
+
+.profile-cont {
+    display: flex;
+    flex-direction: column;
+    background: #181616;
+    color: beige;
+    padding: 40px;
+    border-radius: 10px;
+    width: 400px;
+    height: 600px;
+    justify-content: space-between;
+    text-align: start;
+    box-shadow: 0px 0px 40px rgba(95, 94, 94, 0.719);
+}
+
+.username-profile{
+    margin-top: -80px;
+    margin-bottom: 40px;
+}
+
+.cont-email-profile{
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: row;
+    margin-top: 40px;
+    gap: 20px;
+}
+
+.cont-email-profile .span-profile{
+    margin-bottom: 16px;
+    font-size: 22px;
+}
+
+.cont-email-profile .span-mail {
+    font-size: 16px;
+}
+
+.cont-email-text{
+    display: flex;
+    flex-direction: column;
 }
